--- a/www/.htaccess
+++ b/www/.htaccess
@@ -25,7 +25,7 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
+RewriteRule ^(.*)$ index.html?q=$1 [L,QSA]
 #RewriteRule ^(.*)$ cgi-glob/cgicgi.exe?q=$1 [L,QSA]
 #RewriteRule ^(.*)$ cgi-glob/cgi-1.exe?q=$1 [L,QSA]
 
